; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_mc13xxx-core.c_mc34708_print_revision.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_mc13xxx-core.c_mc34708_print_revision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc13xxx = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"%s: rev %d.%d, fin: %d, fab: %d\0A\00", align 1
@MC34708_REVISION_REVFULL = common dso_local global i32 0, align 4
@MC34708_REVISION_REVMETAL = common dso_local global i32 0, align 4
@MC34708_REVISION_FIN = common dso_local global i32 0, align 4
@MC34708_REVISION_FAB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mc13xxx*, i32)* @mc34708_print_revision to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mc34708_print_revision(%struct.mc13xxx* %0, i32 %1) #0 {
  %3 = alloca %struct.mc13xxx*, align 8
  %4 = alloca i32, align 4
  store %struct.mc13xxx* %0, %struct.mc13xxx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mc13xxx*, %struct.mc13xxx** %3, align 8
  %6 = getelementptr inbounds %struct.mc13xxx, %struct.mc13xxx* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.mc13xxx*, %struct.mc13xxx** %3, align 8
  %9 = getelementptr inbounds %struct.mc13xxx, %struct.mc13xxx* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @MC34708_REVISION_REVFULL, align 4
  %15 = call i32 @maskval(i32 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @MC34708_REVISION_REVMETAL, align 4
  %18 = call i32 @maskval(i32 %16, i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @MC34708_REVISION_FIN, align 4
  %21 = call i32 @maskval(i32 %19, i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @MC34708_REVISION_FAB, align 4
  %24 = call i32 @maskval(i32 %22, i32 %23)
  %25 = call i32 @dev_info(i32 %7, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %15, i32 %18, i32 %21, i32 %24)
  ret void
}

declare dso_local i32 @dev_info(i32, i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @maskval(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
